--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evergreen-travis",
+  "name": "evergreen-travis-worker",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
@@ -19,12 +19,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lennym/evergreen-travis.git"
+    "url": "git+https://github.com/lennym/evergreen-travis-worker.git"
   },
   "author": "Leonard Martin <hello@lennym.co.uk>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lennym/evergreen-travis/issues"
+    "url": "https://github.com/lennym/evergreen-travis-worker/issues"
   },
-  "homepage": "https://github.com/lennym/evergreen-travis#readme"
+  "homepage": "https://github.com/lennym/evergreen-travis-worker#readme"
 }
