--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "evergreen-travis-worker",
   "version": "0.0.0",
-  "description": "",
+  "description": "Repo worker for evergreen-travis",
   "main": "index.js",
   "dependencies": {
     "bl": "^1.1.2",
